<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:padding="8dp"
        android:orientation="vertical"

        android:background="@drawable/radius_border"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/edit_contact"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/backgroundFragment"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current_info"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@color/backgroundFragment"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="right"
                />
            <TextView
                android:id="@+id/text_box_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="right"
                />
            <TextView
                android:id="@+id/text_box_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alternative_number"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:gravity="right"
                />
            <TextView
                android:id="@+id/text_box_number_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/editable_textbox_name"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:maxLines="1"
            android:lines="1"
            android:maxLength="15"
            android:singleLine="true"
            android:textColorHint="@color/greyPrimary"
            android:hint="@string/update_contact_name"
            />

        <EditText
            android:id="@+id/editable_textbox_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:digits="0123456789"
            android:textColor="@color/white"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="8"
            android:textColorHint="@color/greyPrimary"
            android:hint="@string/update_contact_number"
            />
        <EditText
            android:id="@+id/editable_textbox_number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:digits="0123456789"
            android:textColor="@color/white"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:maxLength="8"
            android:textColorHint="@color/greyPrimary"
            android:hint="@string/update_alternative_contact_number"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:background="@color/backgroundFragment"
            >
            <Button
                android:id="@+id/button_update_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="15sp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/button_cancel_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15sp"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>