<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_weight="5"
        android:background="@drawable/radius_border"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/want_to_delete"
            android:textSize="15sp"
            android:layout_weight="4"
            android:textColor="@color/white"
            android:background="@color/backgroundFragment"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_weight="1"
            android:background="@color/backgroundFragment"
            >
            <Button
                android:id="@+id/button_yes_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="15sp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/button_no_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="15sp"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>